--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,4 @@
 {
-  "env": {
-    "test": {
-      "presets": [
-        ["env", {
-          "targets": {
-            "node": "current"
-          }
-        }],
-        "stage-2"
-      ]
-    }
-  }
+  "presets": ["es2015", "stage-2"],
+  "plugins": []
 }
