--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "handle-css-loader",
-  "version": "0.0.1",
+  "name": "handle-allcss-loader",
+  "version": "0.0.3",
   "description": "a webpack loader for handling css loaders",
   "main": "index.js",
   "repository": {
@@ -17,12 +17,8 @@
   },
   "homepage": "https://github.com/hawx1993/handleCssLoader#readme",
   "devDependencies": {
-    "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.24.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "webpack": "^3.0.0"
-  },
-  "peerDependencies": {
-    "extract-text-webpack-plugin": "*"
   }
 }
